--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.0.0",
+    "@iconify-json/mynaui": "^1.2.14",
+    "@iconify-json/simple-icons": "^1.2.44",
     "eslint": "^9.31.0",
     "eslint-plugin-better-tailwindcss": "^3.7.2",
     "eslint-plugin-format": "^1.0.1"
