--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "@unhead/vue": "^2.0.3",
     "@unocss/nuxt": "66.3.3",
+    "@vueuse/nuxt": "13.5.0",
     "nuxt": "^4.0.1",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.11",
@@ -27,10 +28,12 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.0.0",
-    "@iconify-json/mynaui": "^1.2.14",
+    "@iconify-json/majesticons": "^1.2.2",
+    "@iconify-json/mingcute": "^1.2.3",
     "@iconify-json/simple-icons": "^1.2.44",
     "eslint": "^9.31.0",
     "eslint-plugin-better-tailwindcss": "^3.7.2",
     "eslint-plugin-format": "^1.0.1"
-  }
+  },
+  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
