--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuxt-app",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad",
+  "packageManager": "pnpm@10.13.1",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -18,15 +18,16 @@
     "@nuxt/scripts": "0.11.10",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@tailwindcss/vite": "^4.1.11",
-    "@unhead/vue": "^2.0.3",
+    "@unhead/vue": "^2.0.12",
     "@unocss/nuxt": "66.3.3",
     "@vueuse/nuxt": "13.5.0",
     "@vueuse/router": "^13.5.0",
     "arktype": "^2.1.20",
+    "cva": "1.0.0-beta.4",
     "nuxt": "^4.0.1",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.11",
-    "vue": "^3.5.17",
+    "vue": "^3.5.18",
     "vue-router": "4"
   },
   "devDependencies": {
@@ -34,7 +35,7 @@
     "@iconify-json/majesticons": "^1.2.2",
     "@iconify-json/mingcute": "^1.2.3",
     "@iconify-json/simple-icons": "^1.2.44",
-    "eslint": "^9.31.0",
+    "eslint": "^9.32.0",
     "eslint-plugin-better-tailwindcss": "^3.7.2",
     "eslint-plugin-format": "^1.0.1"
   }
