--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "packageManager": "pnpm@10.13.1",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev:web": "nuxt dev",
+    "dev": "otio 'pnpm dev:web' -t 900",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -38,6 +39,7 @@
     "@iconify-json/simple-icons": "^1.2.44",
     "eslint": "^9.32.0",
     "eslint-plugin-better-tailwindcss": "^3.7.2",
-    "eslint-plugin-format": "^1.0.1"
+    "eslint-plugin-format": "^1.0.1",
+    "otio": "^0.0.1"
   }
 }
