--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "Jamie",
   "type": "module",
   "private": true,
   "packageManager": "pnpm@10.13.1",
@@ -17,6 +17,7 @@
     "@nuxt/icon": "1.15.0",
     "@nuxt/image": "1.10.0",
     "@nuxt/scripts": "0.11.10",
+    "@nuxtjs/seo": "3.1.0",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@tailwindcss/vite": "^4.1.11",
     "@unhead/vue": "^2.0.12",
