--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "Jamie",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@10.16.1",
+  "version": "1.0.0",
+  "packageManager": "pnpm@10.26.2",
   "scripts": {
     "build": "nuxt build",
     "dev:web": "nuxt dev",
@@ -12,40 +13,38 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/eslint": "1.7.1",
+    "@nuxt/eslint": "1.12.1",
     "@nuxt/fonts": "0.11.4",
     "@nuxt/icon": "1.15.0",
-    "@nuxt/image": "1.10.0",
-    "@nuxt/scripts": "0.11.10",
-    "@nuxtjs/seo": "3.1.0",
+    "@nuxt/image": "1.11.0",
+    "@nuxt/scripts": "0.11.13",
+    "@nuxtjs/seo": "3.3.0",
     "@nuxtjs/tailwindcss": "6.14.0",
-    "@tailwindcss/vite": "^4.1.13",
-    "@unhead/vue": "^2.0.14",
-    "@unocss/nuxt": "66.3.3",
-    "@vueuse/nuxt": "13.5.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "@unhead/vue": "^2.0.19",
+    "@unocss/nuxt": "66.5.10",
+    "@vueuse/nuxt": "13.9.0",
     "@vueuse/router": "^13.9.0",
-    "arktype": "^2.1.22",
+    "arktype": "^2.1.29",
     "cva": "1.0.0-beta.4",
-    "motion-v": "^1.7.1",
-    "nuxt": "^4.1.2",
-    "tailwind-variants": "^3.1.1",
-    "tailwindcss": "^4.1.13",
-    "vue": "^3.5.21",
-    "vue-router": "4"
+    "motion-v": "^1.7.4",
+    "nuxt": "^4.2.2",
+    "tailwind-variants": "^3.2.2",
+    "tailwindcss": "^4.1.18",
+    "vue": "^3.5.26",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^5.3.0",
+    "@antfu/eslint-config": "^5.4.1",
     "@iconify-json/majesticons": "^1.2.4",
-    "@iconify-json/mingcute": "^1.2.5",
-    "@iconify-json/simple-icons": "^1.2.52",
-    "eslint": "^9.35.0",
-    "eslint-plugin-better-tailwindcss": "^3.7.9",
-    "eslint-plugin-format": "^1.0.1",
+    "@iconify-json/mingcute": "^1.2.6",
+    "@iconify-json/simple-icons": "^1.2.63",
+    "eslint": "^9.39.2",
+    "eslint-plugin-better-tailwindcss": "^3.8.0",
+    "eslint-plugin-format": "^1.1.0",
     "otio": "^0.0.1"
   },
-  "pnpm": {
-    "overrides": {
-      "vite": "npm:rolldown-vite@latest"
-    }
+  "overrides": {
+    "vite": "npm:rolldown-vite@latest"
   }
 }
