--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@iconify-json/majesticons": "^1.2.4",
     "@iconify-json/mingcute": "^1.2.6",
     "@iconify-json/simple-icons": "^1.2.63",
+    "@iconify-json/tabler": "^1.2.25",
     "eslint": "^9.39.2",
     "eslint-plugin-better-tailwindcss": "^3.8.0",
     "eslint-plugin-format": "^1.1.0",
