--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
   "eslint.validate": [
     "javascript",
     "javascriptreact",
+    "tailwindcss",
     "typescript",
     "typescriptreact",
     "vue",
